re PR c++/14865 (No instantiation of VTT at -O1)

PR C++/14865
	* decl2.c (maybe_emit_vtables):  Always import_export_vtable for the
	reachability analysis.

From-SVN: r83685